# VidAPI

./: .codegraph  .gitignore  AGENTS.md  Dockerfile  OPTIMIZATION_PLAN.md  README.md  SPEC.md  docker-compose.yml  guispec.md  pyproject.toml  requirements.txt  run.py  run.sh  run_gui.py
.omo/plans/: fix-youtube-download-issues.md
.omo/run-continuation/: ses_081193376ffe6noKcaeSCHt6Vy.json  ses_08730960bffeJwzc6gerbJ4RhE.json  ses_08731b899ffe0xmBUJV6XqTJlK.json  ses_08736ce9bfferiWjl5Z0IJKBk5.json  ses_087383f6cffekIm845TMHTHFPc.json  ses_08739b993ffedtGRiY5zKobgjq.json  ses_0898636efffeuCbI274lK4iSu8.json  ses_0899f7dccffezmPootlvjkWeL5.json  ses_089a44be1ffeOp7slLNtUKH2Z4.json  ses_08aa5605fffeGqZT11GfYVro0f.json  ses_08af1037bffewPlNJ8ZCoI8jF2.json  ses_08b31bf27ffeyDqeltT9OasFcT.json  ses_08b476023ffeSHa9IlULzoDXo4.json  ses_090eeffcdffeBTEUJHQW8I9UwL.json  ses_09b973d7effeTA27C3MtIOXkmE.json  ses_09b980823ffeaMXSQOPAGKx6ZB.json  ses_09b9890a4ffe3E1fWS2onGlKNn.json  ses_09b9a69b9ffe0MC4fQ9XUh19U0.json  ses_0b018033bffe915tGApdT9P2Y7.json  ses_0b022daa7ffejW0wdmWKH1BvPI.json  ses_0b3eee88cffe725vCRqE9NUh0m.json  ses_0b3faff9bffegJTjbaNY8vJzZY.json  ses_0b40006fcffeIk74QFrl8xkTJx.json  ses_0b4000aa5ffe044RFFlB8GPuKA.json  ses_0b4000ab7ffem9gvFAKeAdel9q.json  ses_0b4000ad7ffefB6Jzp1qq92MtD.json  ses_0b4000f1cffeQTkagbuR6g4W5M.json  ses_0b4005e24ffejBG6P1fNHxu0y2.json  ses_0b40a2836ffeAq0LhQDGFAbz3S.json  ses_0b42af0efffeNqx449UumwiUCI.json  ses_0b4489c99ffeVWsMcEANwNj05I.json  (+37 more)
vidapi/: AGENTS.md  __init__.py  main.py  models.py  task_manager.py
vidapi/db/: AGENTS.md  (+4 more)
(+39 files in other folders)
